--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -54,9 +54,8 @@
         <%= @blog.body %>
       </p>
 
-      <a href="#">編集</a>
-      <a href="#">削除</a>
-
+      <%= link_to "編集", edit_blog_path(@blog) %>
+      <%= link_to "削除", blog_path(@blog), method: :delete %>
       <div class="author-case clearfix">
         <div class="author-image"></div>
         <div class="author-box">
